# api-mx-retest-optimizer

./: .env.dev  .env.gumi  .gitignore  Dockerfile  README.md  pyproject.toml
retest_optimizer/: __main__.py  config.py  main.py
retest_optimizer/application/: inspection_service.py
retest_optimizer/db/: redis_config.py
retest_optimizer/domain/entities/: defect.py
retest_optimizer/domain/repositories/: defect_repository.py
retest_optimizer/infrastructure/redis/: connection.py  defect_repository.py  models.py
retest_optimizer/models/: defect_model.py
retest_optimizer/routers/: bulk_items_router.py  dependencies.py  schemas.py  single_item_router.py
retest_optimizer/services/: redis_operations.py
retest_optimizer/utils/: logging_config.py
tests/application/: test_inspection_service.py
tests/domain/: test_defect_entity.py
tests/infrastructure/: test_redis_repository.py
